base/monitoring/grafana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/success-codes: '401'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:474108156746:certificate/d71c30a1-40eb-49ea-9ee3-3f386378134a
    external-dns.alpha.kubernetes.io/hostname: grafana.hacksm.net
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: prometheus-operator-grafana
              servicePort: 80
